--- a/index.html
+++ b/index.html
@@ -2,10 +2,31 @@
 <html lang="en" dir="ltr">
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"  charset="utf-8">
+    <!-- font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <!-- /font -->
+
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <title>ZOMATO</title>
   </head>
   <body>
+
+    <header>
+      <!-- navbar -->
+
+      <nav class="navbar">
+        <div class="navbar__brand">
+          <img src="assets/logo.png" alt="logo" class="navbar__logo">
+        </div>
+        <div class="navbar__nav__items">
+          <button type="button" name="button" class="nav__item">Order Food</button>
+        </div>
+      </nav>
+
+      <!-- // navbar -->
+    </header>
 
   </body>
 </html>
