--- a/index.html
+++ b/index.html
@@ -21,12 +21,121 @@
           <img src="assets/logo.png" alt="logo" class="navbar__logo">
         </div>
         <div class="navbar__nav__items">
-          <button type="button" name="button" class="nav__item">Order Food</button>
+          <button type="button" name="button" class="nav__item button__primary">Order Food</button>
         </div>
       </nav>
 
       <!-- // navbar -->
     </header>
+
+
+    <main class="container">
+      <section class="hero__container">
+        <div class="hero__image__container">
+          <img src="assets/burger.jfif"class="hero__image" alt="">
+        </div>
+        <div class="hero__description">
+          <h1 class="hero__text">order food from favourite restaurants near me</h1>
+            <button type="button" name="button" class="button__primary">order now</button>
+          </div>
+
+        </div>
+      </section>
+      <br>
+      <br>
+      <br>
+      <br>
+      <!--  -->
+      <section class="explore__menu__container">
+        <h1 class="explore__menu__text">Explore The Menu</h1>
+        <div class="explore__menu__lists">
+          <div class="explore__menu__gradient__bg">
+
+          </div>
+
+          <div class="food__card">
+            <div class="food__card__image__container">
+              <img src="assets/pizza.jfif" class="food__image" alt="">
+            </div>
+            <div class="food__card__description">
+              <h3 class="food__title">pizza </h3>
+              <p class="food__title">pizza koccha booya chaichu.. <br> <span style="color:red;">+3</span></p>
+            </div>
+          </div>
+          <!--  -->
+
+          <div class="food__card" id="pizza__card">
+            <div class="food__card__image__container">
+              <img src="assets/icecream.jfif" class="food__image" alt="">
+            </div>
+            <div class="food__card__description">
+              <h3 class="food__title">Ice-cream </h3>
+              <p class="food__title">icecream malabar joy with milky coating <br> <span style="color:red;">+3</span></p>
+            </div>
+          </div>
+
+          <!--  -->
+
+          <div class="food__card">
+            <div class="food__card__image__container">
+              <img src="assets/pizza.jfif" class="food__image" alt="">
+            </div>
+            <div class="food__card__description">
+              <h3 class="food__title">pizza </h3>
+              <p class="food__title">pizza mordern chukuva <br> <span style="color:red;">+3</span></p>
+            </div>
+          </div>
+
+        </div>
+      </section>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+      <!--  -->
+      <section class="mesg__container">
+        <div class="msg">
+          <div class="msg__heading">
+            <h1 class="msg__update">stay updated</h1>
+          </div>
+
+          <input type="text" name="" class="msg__box" value="Abcd123@gmail.com">
+          <button type="button" name="button" class="button__primary">get updates</button>
+
+        </div>
+      </section>
+
+      <section>
+        <div class="msg__hotel">
+            <img src="assets/restaurant 3.jfif" alt="" class="msg__image">
+            <h3 class="hotel__text">when the man's stomach is full it makes no difference whether he is <br> rich or poor</h3>
+        </div>
+      </section>
+
+
+    <section class="footer__container">
+      <div class="main__footer">
+        <div class="footer__main__image">
+            <h1 class="footer__image">ZOMATO</h1>
+        </div>
+        <div class="footer__text__main">
+        <h4 class="footer__text">pricing</h4>
+        <h4 class="footer__text">promotion</h4>
+        <h4 class="footer__text">details</h4>
+        <h4 class="footer__text">advertisement</h4>
+        <h4 class="footer__text">brand</h4>
+        </div>
+      </div>
+
+    </section>
+
+    </main>
+
+
+
+
 
   </body>
 </html>
